--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "htmlparser": "^1.7.7",
     "node-telegram-bot-api": "^0.30.0",
     "pg": "^7.12.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "util": "^0.12.1"
   }
 }
